# software-rasterizer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  framebuffer.h  model_loader.h  output.h  scene.h  texture.h
include/math/: matrix.h  vector.h
include/pipeline/: clipper.h  fragment_processor.h  rasterizer.h  shadow_map.h  vertex_processor.h
src/: camera.cpp  framebuffer.cpp  main.cpp  model_loader.cpp  output.cpp  scene.cpp  texture.cpp
src/pipeline/: clipper.cpp  fragment_processor.cpp  rasterizer.cpp  shadow_map.cpp  vertex_processor.cpp
